--- a/wp-content/themes/ashion/package.json
+++ b/wp-content/themes/ashion/package.json
@@ -128,6 +128,17 @@
     "yargs": "~11.0.0"
   },
   "dependencies": {
-    "jquery": "^3.3.1"
+    "bootstrap": "^4.4.1",
+    "elegant-icons": "0.0.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "jquery-countdown": "^2.2.0",
+    "jquery-ui-bundle": "^1.12.1-migrate",
+    "jquery.nicescroll": "^3.7.6",
+    "magnific-popup": "^1.1.0",
+    "mixitup": "^3.3.1",
+    "owl.carousel": "^2.3.4",
+    "popper.js": "^1.16.1",
+    "slicknav": "^1.0.8"
   }
 }
