--- a/wp-content/themes/ashion/package.json
+++ b/wp-content/themes/ashion/package.json
@@ -136,6 +136,7 @@
     "jquery-ui-bundle": "^1.12.1-migrate",
     "jquery.nicescroll": "^3.7.6",
     "magnific-popup": "^1.1.0",
+    "masonry-layout": "^4.2.2",
     "mixitup": "^3.3.1",
     "owl.carousel": "^2.3.4",
     "popper.js": "^1.16.1",
