--- a/wp-content/themes/ashion/package.json
+++ b/wp-content/themes/ashion/package.json
@@ -129,6 +129,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.4",
     "elegant-icons": "0.0.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
@@ -140,6 +141,7 @@
     "mixitup": "^3.3.1",
     "owl.carousel": "^2.3.4",
     "popper.js": "^1.16.1",
+    "select2": "^4.1.0-rc.0",
     "slicknav": "^1.0.8"
   }
 }
